[gd_scene load_steps=7 format=3 uid="uid://byroba8fdub2m"]

[ext_resource type="Script" uid="uid://cdvl33i8emjwj" path="res://controllers/fps/controller_fps.gd" id="1_00mp3"]
[ext_resource type="PackedScene" uid="uid://bhwuoapyskx81" path="res://controllers/esc_overlay/esc_overlay.tscn" id="2_p4ycf"]
[ext_resource type="Texture2D" uid="uid://b3t5fp27ju86p" path="res://controllers/fps/crosshair012.png" id="6_6nh86"]
[ext_resource type="AudioStream" uid="uid://80lx0vwk1w2s" path="res://maps/gdtricks/misc/audio/teleport.ogg" id="7_littk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nssj4"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_right = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ub8ih"]
bg_color = Color(0.145098, 0.635294, 0.701961, 1)
shadow_size = 2

[node name="ControllerFps" type="Node3D"]
script = ExtResource("1_00mp3")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Head"]
current = true
fov = 100.0
far = 200.0

[node name="EscOverlay" parent="." instance=ExtResource("2_p4ycf")]

[node name="Hud" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="Hud"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Hud/CenterContainer"]
self_modulate = Color(0.321569, 1, 0.443137, 1)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("6_6nh86")

[node name="BarSpeed" type="ProgressBar" parent="Hud/CenterContainer/TextureRect"]
custom_minimum_size = Vector2(100, 12)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 60.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_nssj4")
theme_override_styles/fill = SubResource("StyleBoxFlat_ub8ih")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="AudioTeleport" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_littk")
volume_db = -2.0
pitch_scale = 2.0
